--- a/styles.css
+++ b/styles.css
@@ -18,15 +18,87 @@ body {
     font-family: karla, sans-serif;
 }
 
+section {
+    text-align: center;
+}
+.container {
+    padding: 7% 10%;
+}
+
+.socials-menu {
+    display: flex;
+    flex-direction: row;
+    list-style: none;
+    margin: auto;
+    justify-content: space-between;
+    max-width: 300px;
+    padding: 0;
+}
+
+.ll-button {
+    height: 35px;
+    color: #bb4a4a;
+    border: #bb4a4a solid 3px;
+    border-radius: 5px;
+    background-color: transparent;
+    font-weight: 600;
+    letter-spacing: 1px;
+}
+
+.ll-button:hover, .ll-button:active {
+    background-color: #bb4a4a;
+    color: #f6f6e9;
+}
+
+/* h2::after{
+    content: "";
+    display: block;
+    border-bottom: 5px solid #DBB628;
+    width: 100px;
+    position: relative;
+    padding-top: 10px;
+    bottom: -6px;
+    margin: auto;   
+} */
+
+p {
+    padding: 1%;
+    line-height: 1.5;
+}
+
+/* lip divider */
+
+.lip-break {
+    height: fit-content;
+    width: 100%;
+    display: flex;
+    margin: 20px auto;
+}
+
+.lips {
+    margin: auto;
+}
+
+.lip-break img{
+    width: 40px;
+    padding: 5px;
+
+}
+
+
+/* Header */
+
 header {
     width: 100%;
     height: 100vh;
-    background-image: url("images/band.png");
-    background-position: top;
+    background-color: white;
+    background-image: linear-gradient(180deg, rgb(255, 255, 255) 0%, rgba(255, 255, 255,.1) 15%), url("images/band.png");
+    background-position: center 190px;
     background-repeat: no-repeat;
     background-size: cover;
     margin: 0;
     padding: 0;
+    transition: all .2s;
 }
 
 .nav {
@@ -35,7 +107,7 @@ header {
 
 .logo {
     width: 25%;
-    max-width: 200px;
+    max-width: 250px;
     margin: auto;
     padding-top: 2%;
     display: block;
@@ -49,96 +121,122 @@ header {
     width: 50%;
     max-width: 700px;
     margin: auto;
-    padding: 2% 0;
+    padding: 3% 0;
 
 }
 
-.nav-menu a{
-    font-weight: 600; 
+.nav-menu a, i{
+    font-weight: 900; 
     text-decoration: none;
     color: #bb4a4a;
     text-transform: uppercase;
     font-size: 1.5em;
+    transition: all .3s;
+
 }
 
-.nav-menu a:hover, 
-.nav-menu a:active {
+.nav-menu a:hover, i:hover, 
+.nav-menu a:hover, i:active {
     color: #DBB628;
-    transition: all .3s;
+    text-decoration: none;
+
 }
 
 @media screen and (max-width: 992px) {
     .nav-menu a {
-        font-size: 1em;
+        font-size: 1.2em;
+        padding: 0 8px;
+    }
+    header ul {
+        width: 60%;
     }
 }
 
 @media screen and (max-width: 640px) {
+    header {
+        height: 80vh;
+        background-position: center 120px;
+    }
     .nav-menu a {
         font-size: .8em;
+        padding: 0 8px;
+    }
+
+    header ul {
+        width: 70%;
+    }
+
+    header i {
+        font-size: 20px;
     }
 }
 
 
-section {
-    text-align: center;
-}
-.container {
-    padding: 7% 10%;
+/* intro */
+
+.intro {
+    max-width: 600px;
+    margin: auto;
+    font-size: 23px;
 }
 
-h2::after{
-    content: "";
-    display: block;
-    border-bottom: 5px solid #DBB628;
-    width: 100px;
-    position: relative;
-    padding-top: 10px;
-    bottom: -6px;
-    margin: auto;   
+@media screen and (max-width: 992px) {
+
+    .listen h2 {
+        padding-top: 75px;
+    }
 }
 
-p {
-    padding: 1%;
-    line-height: 1.5;
+.video {
+    aspect-ratio: 16/9;
 }
 
 
-/* white seciton */
-.white-section h2{
-    color: #bb4a4a;
+.watch-button {
+    margin-top: 40px;
+    font-size: 25px;
+    line-height: 0px;
+    padding: 10px 20px;
 }
-.white-section h2::after {
-    border-bottom: 5px solid #DBB628;
-}
-
-/* blue section */
-
-.blue-section {
-    background-color: #61a6ab;
-    color:#f6f6e9;
-}
-
-.blue-section h2::after {
-    border-bottom: 5px solid #bb4a4a;
-
-}
-
-/* red section */
-.red-section {
-    background-color: #bb4a4a;
-    color:#f6f6e9;
-}
-
-.red-section h2::after {
-    border-bottom: 5px solid #61a6ab;
-
-}
-
-
 
 
 footer {
-    height: 50vh;
+    height: 50%;
+    width: 100%;
     background-color: #DBB628;
+
+    /* background: no-repeat top/cover url(images/goldbackground.png); */
 }
+
+.follow {
+    text-align: center;
+    margin: auto;
+    color: #bb4a4a;
+}
+
+.follow h1, h2 {
+    font-weight: 900;
+}
+
+footer .socials-menu {
+    padding: 10px 0 25px 0;
+}
+
+
+.follow i {
+    font-size: 25px;
+}
+
+.email-box {
+    border-radius: 5px;
+    padding: 2px;
+    margin-top: 8px;
+    width: 30%;
+    height: 35px;
+    border: #bb4a4a solid 1px;
+}
+
+
+
+
+
